--- a/helm/unifi/values.yaml
+++ b/helm/unifi/values.yaml
@@ -64,7 +64,7 @@ discoveryService:
 
 ingress:
   enabled: true
-  annotations: {}
+  annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
